clusters/default/stirling-pdf/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: stirling-pdf
  namespace: stirling-pdf
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`stirling.${BASE_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: crowdsec-bouncer
          namespace: kube-system
        - name: authentik-forwardauth
          namespace: kube-system
      services:
        - name: stirling-pdf
          port: 80
